--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
-    <link rel="apple-touch-icon" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flovers</title>
